--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,11 +20,11 @@ header {
     background-color: #ffffff;
     border-bottom: 2px solid #cccccc;
     position: relative;
-    top:0;
-    left:0;
-    margin:0 0 40px 0;
-    
+    top: 0;
+    left: 0;
+    margin: 0 0 40px 0;
 }
+
 .navbar {
     line-height: 100px;
     position: relative;
@@ -86,6 +86,11 @@ hr {
     margin: 0 0;
 }
 
+.contact {
+    padding: 20px 0 20px 20px;
+    line-height: 25px;
+}
+
 footer {
     width: 100%;
     background-color: #777777;
@@ -104,4 +109,21 @@ a {
 a:hover {
     background-color: #4aaaa5;
     color: #ffffff;
+}
+
+input {
+    width: 97%;
+}
+
+textarea[name="message"] {
+    width: 97%;
+}
+
+input[type="submit"] {
+    line-height: 40px;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    border: none;
+    width: 90px;
+    margin-top: 20px;
 }
