--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-image: url("../images/greek-vase.png");
@@ -61,6 +66,7 @@ li {
     left: 16%;
     height: 480px;
     margin-bottom: 100px;
+    min-height: 100%;
 }
 
 .wrapper h2, .wrapper p {
@@ -94,11 +100,12 @@ hr {
 footer {
     width: 100%;
     background-color: #777777;
-    border-top: 5px solid #4aaaa5;
+    border-top: 8px solid #4aaaa5;
     line-height: 100px;
     text-align: center;
     color: #ffffff;
     font-size: 10px;
+    margin-top: -50px;
 }
 
 a {
